--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.9",
+    "@types/express-fileupload": "^1.1.6",
     "@types/lodash": "^4.14.167",
     "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mssql": "^6.3.0",
@@ -26,7 +29,8 @@
     "reflect-metadata": "^0.1.13",
     "set-tz": "^0.2.0",
     "sqlite3": "^5.0.0",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
